@startuml

title __FIRE's Class Diagram__\n

  namespace  {
    namespace ire {
      class Fire.FireDown {
          - hurtBounds : Rectangle
          - lastTime : long
          - timeOfLife : long
          - timer : long
          + FireDown()
          + checkFireCollision()
          + die()
          + getHurtCollisionBounds()
          + render()
          + update()
          - getCurrentAnimationFrameOfFireDown()
          - timerUpdate()
      }
    }
  }
  

  namespace  {
    namespace ire {
      class Fire.FireLeft {
          - hurtBounds : Rectangle
          - lastTime : long
          - timeOfLife : long
          - timer : long
          + FireLeft()
          + checkFireCollision()
          + die()
          + getHurtCollisionBounds()
          + render()
          + update()
          - getCurrentAnimationFrameOfFireLeft()
          - timerUpdate()
      }
    }
  }
  

  namespace  {
    namespace ire {
      class Fire.FireRight {
          - hurtBounds : Rectangle
          - lastTime : long
          - timeOfLife : long
          - timer : long
          + FireRight()
          + checkFireCollision()
          + die()
          + getHurtCollisionBounds()
          + render()
          + update()
          - getCurrentAnimationFrameOfFireRight()
          - timerUpdate()
      }
    }
  }
  

  namespace  {
    namespace ire {
      class Fire.FireUp {
          - hurtBounds : Rectangle
          - lastTime : long
          - timeOfLife : long
          - timer : long
          + FireUp()
          + checkFireCollision()
          + die()
          + getHurtCollisionBounds()
          + render()
          + update()
          - getCurrentAnimationFrameOfFireUp()
          - timerUpdate()
      }
    }
  }
  

  Fire.FireDown -up-|> entities.StaticEntity
  Fire.FireDown o-- gfx.Animation : fireDown
  Fire.FireLeft -up-|> entities.StaticEntity
  Fire.FireLeft o-- gfx.Animation : fireLeft
  Fire.FireRight -up-|> entities.StaticEntity
  Fire.FireRight o-- gfx.Animation : fireRight
  Fire.FireUp -up-|> entities.StaticEntity
  Fire.FireUp o-- gfx.Animation : fireUp


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
